<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".ativity.RegisterActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/imgUser"
        app:srcCompat="@drawable/imguser" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nameUser"
            app:srcCompat="@drawable/imgemailuser" />

        <EditText
            android:id="@+id/tvUser"
            android:layout_width="247dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/textbox"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgCalendar"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/Calendar"
            app:srcCompat="@drawable/icon_calendar" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="247dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/textbox"
            android:gravity="center_vertical"
            android:hint="@string/Data"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgvEmail"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/email"
            app:srcCompat="@drawable/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="247dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="@string/emailEx"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgvPass"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/Password"
            app:srcCompat="@drawable/imgpassuser" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="247dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="@string/etPassword"
            android:inputType="textPassword" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgvConfPass"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/confPass"
            app:srcCompat="@drawable/imgpassuser" />

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="247dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="@string/ConfPasword"
            android:inputType="textPassword" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnRegisterAR"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistar"
        android:theme="@style/ButtonYellow" />
</LinearLayout>