<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".ativity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="86dp" />

            <ImageView
                android:id="@+id/ivImgALUser"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/ivImgALUser"
                app:srcCompat="@drawable/imguser" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/ivEmailAL"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ivEmailAL"
                    app:srcCompat="@drawable/imgemailuser" />

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="230dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textbox"
                    android:gravity="center_vertical"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/ivImgPass"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ivImgPass"
                    app:srcCompat="@drawable/imgpassuser" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="230dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textbox"
                    android:gravity="center_vertical"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:theme="@style/ButtonYellow" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvAL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/tvAL" />
                <Space
                    android:layout_width="13dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/etRegister"
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:cursorVisible="false"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:onClick="Register"
                    android:text="@string/etRegister"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>