<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".ativity.StartActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="162dp" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSIniciar"
            style="@style/ButtonYellow"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/btnIniciar"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:theme="@style/ButtonYellow"
            android:onClick="iniciar"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonYellow"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:onClick="Inicio_Sessao"
            android:theme="@style/ButtonGray" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvConta"
            android:layout_width="273dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/tvConta"
            android:textAlignment="textEnd"
            android:textSize="14sp" />

        <Space
            android:layout_width="13dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/editTextRegiste"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:cursorVisible="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:onClick="Register"
            android:text="@string/etRegister"
            android:textSize="14sp" />

        <Space
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>